--- a/CSS/figma.css
+++ b/CSS/figma.css
@@ -50,12 +50,28 @@ header nav ul a{
   color: #E34E67;
 }
 
+#submenu{
+    display: none;
+
+}
+#acc:hover #submenu{
+    background-color: white;
+    display: grid;
+    list-style: none;
+    gap: 15px;
+    position: absolute;
+    padding: 15px 0;
+
+
+}
+
 
 #section1{
     max-width: 1440px;
     margin:auto;
-    display: flex;
-    justify-content: center;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    align-items: center;
     min-height: 600px;
     padding: 50px 50px;
 }
@@ -80,7 +96,8 @@ header nav ul a{
 }
 .btn{
     display: flex;
-    gap: 20px;   
+    gap: 20px;  
+    margin-top: 50px; 
 
 }
 
@@ -106,17 +123,24 @@ header nav ul a{
     border-radius: 5px;
     transition: all 0.3s ease-in-out;
 }
-.div1 img{
+#section1 img{
    max-width: 700px;
+   width: 90%;
 }
 
-#section2{
+#section2 {
     background-color: #1E1D31;
     padding: 100px;
+
+    
+
+}
+#section2 #ci1{
+    max-width: 1440px;
+    margin: auto;
     display: grid;
     grid-template-columns: 1fr 1fr;
     gap: 20px;
-
 }
 #section2 h2{
     color: #30CD8A;
@@ -186,6 +210,7 @@ header nav ul a{
 #section3{
     max-width: 1440px;
     margin: auto;
+    margin-bottom: 50px;
 }
 #section3 .artsec3{
    text-align: center;
@@ -210,19 +235,301 @@ header nav ul a{
 
 #section3 div{
     display: flex;
+    gap: 30px;
 }
 
-.p1, .p2{
+.p2{
+    background-color: #1E1D31;
+    border-radius: 15px;
+    border:  1px solid;
+    padding:  40px;
+    margin-top: 20px;
+}
+.p4{
+    background-color: #1E1D31;
+    border-radius: 15px;
+    border:  1px solid;
+    padding:  40px;
+    margin-top: 20px;
+
+}
+#section31 .p2{
+    color: #FFFFFF;
+}
+#section32 .p4{
+    color: #FFFFFF;
+}
+
+
+#section31 .p1{
+ color: #30CD8A;
+}
+#section32 .p3{
+    color: #30CD8A;
+}
+#section4{
+     max-width: 1440px;
+    margin: auto;
+    margin-bottom: 50px;
+    
+
+}
+#section4 .art4{
+    text-align: center;
+    flex-wrap: wrap;
+    margin: 70px 385px;
+    justify-content: center;
+}
+#section4> .art4>  h2{
+    font-family: "Pacifico", sans-serif;
+    color: #E34E67;
+    font-size: 23px;
+
+}
+#section4 h3{
+    font-family: "Oswald", sans-serif;
+    color: #423B73;
+    font-size: 38px;
+}
+
+#section4 .div00{
+    display: grid;
+    grid-template-columns: 3fr 1fr;
+    align-items: center;
+}
+
+.artdiv00{
+    background-color: #1E1D31;
+    padding: 15px;
+    border-radius: 15px;
+    border:  1px solid;
+    margin-top: 20px;
+}
+.div00> .artdiv00> h2{
+    color: #30CD8A;
+    font-family: "Oswald" sans-serif;
+    font-size: 28px;
+
+}
+.div00 .artdiv00 p{
+    color: #FFFFFF;
+    margin-bottom: 10px;
+}
+
+.div00 .artdiv00 .art00 img{
+   max-block-size: fit-content;
+
+}
+.artdiv00 .art00{
+    gap: 10px;
+    margin-top: 10px;
+    display: flex;
+}
+#section4 .btn1{
+    position: relative;
+    display: block;
+    width: fit-content;
+    margin: auto;
+    padding: 15px;
+    border-radius: 10px;
+    margin-top: 60px;
 
 }
 
 
+#section5{
+     max-width: 1440px;
+    margin: auto;
+    margin-bottom: 50px;
+
+}
+#section5 .art4{
+    text-align: center;
+    flex-wrap: wrap;
+    margin: 70px 385px;
+    justify-content: center;
+}
+#section5> .art4>  h2{
+    font-family: "Pacifico", sans-serif;
+    color: #E34E67;
+    font-size: 23px;
+
+}
+#section5 h3{
+    font-family: "Oswald", sans-serif;
+    color: #423B73;
+    font-size: 38px;
+}
+
+#section5 .div00{
+    display: grid;
+    grid-template-columns: 1fr 3fr;
+    align-items: center;
+}
+
+.artdiv00{
+    background-color: #1E1D31;
+    border-radius: 15px;
+    border:  1px solid;
+    margin-top: 20px;
+}
+.div00> .artdiv00> h2{
+    color: #E34E67;
+    font-family: "Oswald" sans-serif;
+    font-size: 28px;
+
+}
+.div00 .artdiv00 p{
+    color: #FFFFFF;
+    margin-bottom: 10px;
+}
+
+.div00 .artdiv00 .art00 img{
+   max-block-size: fit-content;
+
+}
+.artdiv00 .art00{
+    gap: 10px;
+    margin-top: 10px;
+    display: flex;
+}
+
+#section5 .btn1{
+    display: block;
+    width: fit-content;
+    margin: auto;
+    padding: 15px;
+    border-radius: 10px;
+    margin-top: 60px;
+
+}
+
+#section6{
+    max-width: 1440px;
+    margin: auto;
+    display: flex;
+    gap: 40px;
+    padding: 20px;
+    margin-bottom: 50px;
+}
+#section6 article{
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-content: space-evenly;
+
+}
+
+
+#section6 h2{
+    font-family: "Pacifico", sans-serif;
+    color: #E34E67;
+    font-size: 23px;
+}
+
+#section6 h3{
+  font-family: "Oswald", sans-serif;
+  font-size: 38px;
+  color: #423B73;
+
+}
+#section6 article p{
+        font-family: "Open sans", sans-serif;
+        font-weight: 400;
+        font-size: 16px;
+        line-height: 24px;
+        letter-spacing: 0%;
+        vertical-align: middle;
+        margin-top: 20px;
+        width: 80%;
+
+}
+
+#section6 form{
+    max-width: 1440px;
+    margin: auto;
+    display: grid;
+    gap: 20px;
+    padding: 20px;
+    background-color: #1E1D31;
+    border-radius: 10px;
+}
+#section6 input, #section6 form textarea{
+    border:1px solid #30CD8A;
+    border-radius: 5px;
+    padding: 12px;
+    background-color: transparent;
+    color:#FFFFFF;
+    font-size: 16px;
+
+}
+#ouais{
+    background-color: #1E1D31;
+    color: #FFFFFF;
+    border-color: #30CD8A;
+    border-radius: 5px;
+    padding:12px ;
+    font-family:"Open Sans", sans-serif ;
+    font-size: 16px;
+    
+}
+#section6 form h4{
+    font-size: 38px;
+    font-family: "Oswald", sans-serif;
+    color: #FFFFFF;
+    text-align: center;
+}
+#section6 form article{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 10px;
+}
+
+::placeholder{
+    font-family: "Open Sans", sans-serif;
+    font-size: 16px;
+    color:#FFFFFF;
+}
+
+#section6 form div p{
+    font-size: 18px;
+    color:#FFFFFF;
+    margin: 20px 0;
+}
+
+#section6 form div:last-of-type{
+    display: block;
+}
+
+#section6 form input[type="submit"]{
+    border-color:#30CD8A;
+    background-color: #30CD8A;
+    padding: 10px 22px;
+    cursor: pointer;
+    font-size: 21px;
+    font-family: "Roboto", sans-serif;
+    margin-top: 25px;
+    color:#FFFFFF;
+}
+.check{
+    height: fit-content;
+    display: block;
+    gap: 40px;
+}
+.check input label{
+    height: 60% auto !important;
+}
+.check label{
+    color:#FFFFFF;
+    font-size: 18px;
+    margin-bottom: 12px;
+    line-height: 35px;
+}
 footer{
       background-color: #363450;
 }
 footer .footer1{
     max-width: 1440px;
-    margin: auto 40px;
+    margin: auto;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     gap: 30px;
@@ -262,6 +569,9 @@ footer .footer1{
     color:#423B73;
 
 }
+
+
+/* Responsive tablette */
 @media screen and (max-width:1024px){
 
     #burger{
@@ -274,5 +584,43 @@ footer .footer1{
         display: none;
     }
 
+    #section1 {
+        grid-template-columns: 1fr;
+    }
+
+    #section1 img{
+        align-items: center;
+        margin-top: 50px;
+    }
+    #section4{
+        grid-template-columns: 1fr;
+    }
+    #section4 .div00{
+        grid-template-columns: 1fr;
+    }
+    #section5{
+        grid-template-columns: 1fr;
+    }
+    #section5 .div00{
+        grid-template-columns: 1fr;
+    }
+    .image22{
+        width: 30%;
+        justify-self: center;
+        margin-top: 50px;
+    }
+   
+}
+
+/* Responsive mobile */
+@media screen  and (max-width:767px){
+    header a img{
+        min-width: 0;
+        width: 100%;
+        padding: 30px;
+    }
+    #section2 #ci1{
+        grid-template-columns: 1fr;
+    }
 
 }
